cabal-version:       2.4
name:                AoC2021-Haskell
version:             0.0.0.1
synopsis:            AoC 2021 solutions using Haskell
description:         AoC 2021 solutions using Haskell
license:             MIT
license-file:        LICENSE
author:              Theo Garefalakis
maintainer:          Theo Garefalakis <tgaref@gmail.com>
copyright:           2021 Theo Garefalakis
category:            Game
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.7

common common-options
  build-depends:       base ^>= 4.14.3.0
                     , relude
                     , text
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       DeriveAnyClass
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       TypeApplications
                       ViewPatterns
                       BangPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Day1

executable aoc21
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       AoC2021-Haskell
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -O2

